--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<figure class="logo animated fadeInDown delay-07s">
 				<a href="#"><img src="img/logo.png" alt=""></a>
 			</figure>
-			<h1 class="animated fadeInDown delay-07s">Welcome To Knight Studios</h1>
+			<h1 class="animated fadeInDown delay-07s">Welcome To Sky Tours</h1>
 			<ul class="we-create animated fadeInUp delay-1s">
 				<li>We are a digital agency that loves crafting beautiful websites.</li>
 			</ul>
@@ -59,7 +59,7 @@
 		<div class="container">
 			<ul class="main-nav">
 				<li><a href="#header">Home</a></li>
-				<li><a href="#service">Services</a></li>
+				<li><a href="#schedules">Flight Schedules</a></li>
 				<li><a href="#Portfolio">Portfolio</a></li>
 				<li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
 				<li><a href="#client">Clients</a></li>
@@ -73,7 +73,7 @@
 
 
 
-	<section class="main-section" id="service">
+	<section class="main-section" id="schedules">
 		<!--main-section-start-->
 		<div class="container">
 			<h2>Services</h2>
