--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<ul class="we-create animated fadeInUp delay-1s">
 				<li>We are a digital agency that loves crafting beautiful websites.</li>
 			</ul>
-			<a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
+			<a class="link animated fadeInUp delay-1s servicelink" href="#schedules">Get Started</a>
 		</div>
 	</header>
 	<!--header-end-->
