--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<figure class="logo animated fadeInDown delay-07s">
 				<a href="#"><img src="img/logo.png" alt=""></a>
 			</figure>
-			<h1 class="animated fadeInDown delay-07s">Welcome To Sky Tours</h1>
+			<h1 class="animated fadeInDown delay-07s">Welcome To Sky Link</h1>
 			<ul class="we-create animated fadeInUp delay-1s">
 				<li>We are a digital agency that loves crafting beautiful websites.</li>
 			</ul>
