--- a/index.html
+++ b/index.html
@@ -166,6 +166,20 @@
                                                                     <label for="#">Price ($)</label>
                                                                 <div id="slider"></div>
                                                             </div>
+                                                        <div class="single-field min_width ">
+                                                                <label for="#">Car Rental</label>
+                                                                <select class="wide" >
+                                                                        <option data-display="Yes">Yes</option>
+                                                                        <option value="1">No</option>
+                                                                </select>
+                                                            </div>
+                                                        <div class="single-field min_width ">
+                                                                <label for="#">Would you like assistance booking a hotel?</label>
+                                                                <select class="wide" >
+                                                                        <option data-display="Yes">Yes</option>
+                                                                        <option value="1">No</option>
+                                                                </select>
+                                                            </div>
                                                             <div class="serach_icon">
                                                                     <a href="#">
                                                                             <i class="ti-search"></i>
