--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                                                 </select>
                                                             </div>
                                                         <div class="single-field min_width ">
-                                                                <label for="#">Would you like assistance booking a hotel?</label>
+                                                                <label for="#">Would you to book a hotel?</label>
                                                                 <select class="wide" >
                                                                         <option data-display="Yes">Yes</option>
                                                                         <option value="1">No</option>
