--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                                                         <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="Property.html">Property</a></li>
-                                            <li><a href="Property.html">Property</a></li>
+                                            <li><a href="Property.html">Careers</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
