--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Real state</title>
+    <title>Sky Link</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -87,12 +87,11 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="index.html">home</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <li><a class="active" href="index.html">flights</a></li>
+                                            <li><a href="#">Information <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
-                                                        <li><a href="about.html">about</a></li>
-                                                        <li><a href="property_details.html">property details</a></li>
-                                                        <li><a href="elements.html">elements</a></li>
+                                                        <li><a href="about.html">Hotels</a></li>
+                                                        <li><a href="property_details.html">Car Rentals</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="Property.html">Careers</a></li>
