--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                                         <div class="modern_home_info">
                                                 <div class="modern_home_info_inner">
                                                     <span class="for_sale">
-                                                        For Sale
+                                                        Perks
                                                     </span>
                                                     <div class="info_header">
-                                                      <h3>Sky Link </h3>
+                                                      <h3>Sky Link Frequent Flyer Program</h3>
                                                     </div>
                                                     <div class="info_content">
                                                         <ul>
