--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                                         Perks
                                                     </span>
                                                     <div class="info_header">
-                                                      <h3>Sky Link Frequent Flyer Program</h3>
+                                                      <h3>Frequent Flyer Program</h3>
                                                     </div>
                                                     <div class="info_content">
                                                         <ul>
