--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<!doctype html>
+l<!doctype html>
 <html class="no-js" lang="zxx">
 
 <head>
@@ -234,18 +233,19 @@
                 <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6">
                                 <div class="faq_ask">
-                                    <h3>Frequently ask</h3>
+                                    <h3>Frequently Asked Questions</h3>
                                         <div id="accordion">
                                                 <div class="card">
                                                     <div class="card-header" id="headingTwo">
                                                         <h5 class="mb-0">
                                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                                    Adieus who direct esteem <span>It esteems luckily?</span>
+                                                                   <span>What Are The Rules Of Air Travel</span>
                                                             </button>
                                                         </h5>
                                                     </div>
                                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion" style="">
-                                                        <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
+                                                        <div class="card-body">3-1-1 for carry-ons = 3.4 ounce (100ml) bottle or less (by volume) <br></br> 1 quart-sized, clear, plastic, zip-top bag<br></br> 1 bag per passenger placed in screening bin. One-quart bag per person limits the total liquid volume each traveler can bring. 3.4 ounce (100ml) container size is a security measure
+
                                                         </div>
                                                     </div>
                                                 </div>
