--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
                 $('.ui-slider-handle:eq(0) .price-range-min').html( ui.values[0] );
                 $('.ui-slider-handle:eq(1) .price-range-max').html( ui.values[1] );
-                $('.price-range-both').html('<i>K' + ui.values[0] + ' - </i>K' + ui.values[1]);
+                $('.price-range-both').html('<i>' + ui.values[0] + ' - </i>' + ui.values[1]);
 
                 // get values of min and max
                 $("#minval").val(ui.values[0]);
