--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ l<!doctype html>
                     <div class="row">
                         <div class="col-xl-5 col-md-5 ">
                             <div class="header_left">
-                                <p>Welcome to Conbusi consulting service</p>
+                                <p>Welcome to Sky Link</p>
                             </div>
                         </div>
                         <div class="col-xl-7 col-md-7">
