--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ l<!doctype html>
                                                     <div class="card-header" id="headingTwo">
                                                         <h5 class="mb-0">
                                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                                   <span>What Are The Rules Of Air Travel</span>
+                                                                   <span>The Rules Of Air Travel</span>
                                                             </button>
                                                         </h5>
                                                     </div>
@@ -253,12 +253,12 @@ l<!doctype html>
                                                     <div class="card-header" id="headingOne">
                                                         <h5 class="mb-0">
                                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                                                    Who direct esteem It esteems?
+                                                                    How Early Can I Pass Through Security?
                                                             </button>
                                                         </h5>
                                                     </div>
                                                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion" style="">
-                                                        <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
+                                                        <div class="card-body">You should aim to be at the airport atleast 2 hours early. In the order to pass through the security check, you must have a boarding pass.
                                                         </div>
                                                     </div>
                                                 </div>
