--- a/single-blog.html
+++ b/single-blog.html
@@ -131,7 +131,7 @@
                      <div class="row">
                          <div class="col-xl-12">
                              <div class="bradcam_text text-center">
-                                 <h3>Blog Details</h3>
+                                 <h3>Career Opportunities</h3>
                              </div>
                          </div>
                      </div>
