--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ l<!doctype html>
                                                         <li><a href="property_details.html">Car Rentals</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="Property.html">Careers</a></li>
+                                            <li><a href="careers.html">Careers</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
