--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@ l<!doctype html>
                                                     </div>
                                                     <div class="info_content">
                                                         <ul>
-                                                            <li> <img src="img/svg_icon/square.svg" alt=""> <span>1200 Sqft</span>  </li>
-                                                            <li> <img src="img/svg_icon/bed.svg" alt=""> <span>2 Bed</span> </li>
-                                                            <li> <img src="img/svg_icon/bath.svg" alt=""> <span>2 Bath</span> </li>
+                                                            <li> <img src="img/svg_icon/square.svg" alt=""> <span>25,000</span>  </li>
+                                                            <li> <img src="img/svg_icon/bed.svg" alt=""> <span>2</span> </li>
+                                                            <li> <img src="img/svg_icon/bath.svg" alt=""> <span>6</span> </li>
                                                         </ul>
-                                                        <p>Esteem spirit temper too say adieus who direct esteem. It estee luckily or picture placing drawing. Apartments frequently or motionless on reasonable.</p>
+                                                        <p>As a member of our Skylink Rewards program, you can earn free tickets to anywhere we fly.  For every 25,000 you travel with us, you can earn two free tickets to a destination of your choice. Members are eligible for up to 6 non-transferrable tickets per year.</p>
                                                         <div class="prise_view_details d-flex justify-content-between align-items-center">
                                                             <span>$4567</span>
                                                             <a class="boxed-btn3-line" href="#">View Details</a>
