--- a/index.html
+++ b/index.html
@@ -209,11 +209,7 @@ l<!doctype html>
                                                             <li> <img src="img/svg_icon/bed.svg" alt=""> <span>2</span> </li>
                                                             <li> <img src="img/svg_icon/bath.svg" alt=""> <span>6</span> </li>
                                                         </ul>
-                                                        <p>As a member of our Skylink Rewards program, you can earn free tickets to anywhere we fly.  For every 25,000 you travel with us, you can earn two free tickets to a destination of your choice. Members are eligible for up to 6 non-transferrable tickets per year.</p>
-                                                        <div class="prise_view_details d-flex justify-content-between align-items-center">
-                                                            <span>$4567</span>
-                                                            <a class="boxed-btn3-line" href="#">View Details</a>
-                                                        </div>
+                                                        <p>As a member of our <b>Skylink Rewards program</b>, you can earn free tickets to anywhere we fly.  For every <b>25,000</b> you travel with us, you can earn <b>two</b> free tickets to a destination of your choice. Members are eligible for up to <b>6</b> non-transferrable tickets per year.</p>
                                                     </div>
                                                 </div>
                                         </div>
