--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ l<!doctype html>
                             <div class="header_right d-flex">
                                     <div class="short_contact_list">
                                             <ul>
-                                                <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
-                                                <li><a href="#"> <i class="fa fa-phone"></i> 1601-609 6780</a></li>
+                                                <li><a href="#"> <i class="fa fa-envelope"></i> info@skylink.com</a></li>
+                                                <li><a href="#"> <i class="fa fa-phone"></i> (888) 888-8888</a></li>
                                             </ul>
                                         </div>
                                         <div class="social_media_links">
