--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ l<!doctype html>
                             <div class="col-xl-10 offset-xl-1">
                                 <div class="slider_text text-center justify-content-center">
                                     <h3>Which flight works best for you?</h3>
-                                    <p>Esteem spirit temper too say adieus who direct esteem.</p>
+                                    <p>Travel Through a World of Opportunities</p>
                                 </div>
                                 <div class="property_form">
                                     <form action="#">
