--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ l<!doctype html>
             <div class="row">
                 <div class="col-xl-7">
                     <div class="action_heading">
-                        <h3>Add your property for sale</h3>
+                        <h3>See The World, Embrace the Opportunities</h3>
                     </div>
                 </div>
             </div>
