--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@ l<!doctype html>
                                                     <div class="card-header" id="headingThree">
                                                         <h5 class="mb-0">
                                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                                    Duis consectetur feugiat auctor?
+                                                                    Do We Have Luggage Fees?
                                                             </button>
                                                         </h5>
                                                     </div>
                                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion" style="">
-                                                        <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
+                                                        <div class="card-body">We offer <b>one</b> free carry-on and <b>one</b> free checked bag for each of our passengers. Any additional baggage will be a flat-rate cost of <b>$5 dollars</b>.
                                                         </div>
                                                     </div>
                                                 </div>
