--- a/flights.html
+++ b/flights.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/flights.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -127,12 +127,6 @@
                             <div class="col-xl-10 offset-xl-1">
                                 <div class="slider_text text-center justify-content-center">
                                     <h3>Which flight works best for you?</h3>
-                                </div>
-                                <div class="property_form">
-                                    <form action="#">
-                                        <div class="row">
-                                            <div class="col-xl-12">
-                                                <div class="form_wrap d-flex">
                                                   <table>
                                                     <thead>
                                                       <tr>
