--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ l<!doctype html>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="search_btn">
-                                        <a href="#">
+                                        <a href="flights.html">
                                             <i class="ti-search"></i>
                                         </a>
                                     </div>
