--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ l<!doctype html>
                                 <div class="Appointment">
                                     <div class="search_btn">
                                         <a href="flights.html">
+                                            <i class="ti-search"></i>
                                         </a>
                                     </div>
                                 </div>
