--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ l<!doctype html>
                                                                 </select>
                                                             </div>
                                                             <div class="serach_icon">
-                                                                    <a href="#">
+                                                                    <a href="flights.html">
                                                                             <i class="ti-search"></i>
                                                                     </a>
                                                                 </div>
