--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Busicol</title>
+    <title>Contact Us</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -117,7 +117,7 @@
             </div>
         </header>
         <!-- header-end -->
-        
+
              <!-- bradcam_area  -->
              <div class="bradcam_area bradcam_bg_1">
                     <div class="container">
