--- a/flights.html
+++ b/flights.html
@@ -120,100 +120,106 @@
     </header>
     <!-- header-end -->
 
-    <div class="slider_area">
-            <div class="single_slider  d-flex align-items-center slider_bg_1">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-xl-10 offset-xl-1">
-                                <div class="slider_text text-center justify-content-center">
-                                    <h3>Which flight works best for you?</h3>
-                                                  <table>
-                                                    <thead>
-                                                      <tr>
-                                                        <th>ID
-                                                        <th>First Name
-                                                        <th>Last Name
-                                                        <th>Goes By
-                                                        <th>Gender
-                                                        <th>Class
-                                                        <th>Alive
-                                                    </thead>
-                                                    <tbody>
-                                                      <tr>
-                                                        <td>1
-                                                        <td>Malcolm
-                                                        <td>Reynolds
-                                                        <td>Mal, Cap'n
-                                                        <td>M
-                                                        <td>Captain
-                                                        <td>Yes
-                                                      <tr>
-                                                        <td>2
-                                                        <td>Zoe
-                                                        <td>Washburn
-                                                        <td>Zoe
-                                                        <td>F
-                                                        <td>First Mate
-                                                        <td>Yes
-                                                      <tr class="disabled">
-                                                        <td>3
-                                                        <td>Hoban
-                                                        <td>Washburn
-                                                        <td>Wash
-                                                        <td>M
-                                                        <td>Pilot
-                                                        <td>No
-                                                      <tr>
-                                                        <td>4
-                                                        <td>Kaylee
-                                                        <td>Frye
-                                                        <td>Kaylee
-                                                        <td>F
-                                                        <td>Mechanic
-                                                        <td>Yes
-                                                      <tr>
-                                                        <td>5
-                                                        <td>Jayne
-                                                        <td>Cobb
-                                                        <td>Jayne
-                                                        <td>M
-                                                        <td>Muscle
-                                                        <td>Yes
-                                                      <tr class="disabled">
-                                                        <td>6
-                                                        <td>[unknown]
-                                                        <td>Book
-                                                        <td>Shepherd
-                                                        <td>M
-                                                        <td>Passenger
-                                                        <td>No
-                                                      <tr>
-                                                        <td>7
-                                                        <td>Simon
-                                                        <td>Tam
-                                                        <td>Simon
-                                                        <td>M
-                                                        <td>Passenger
-                                                        <td>Yes
-                                                      <tr>
-                                                        <td>8
-                                                        <td>River
-                                                        <td>Tam
-                                                        <td>River
-                                                        <td>F
-                                                        <td>Passenger
-                                                        <td>Yes
-                                                    </tbody>
-                                                  </table>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="section-top-border">
+      <h3 class="mb-30">Table</h3>
+      <div class="progress-table-wrap">
+        <div class="progress-table">
+          <div class="table-head">
+            <div class="serial">#</div>
+            <div class="country">Countries</div>
+            <div class="visit">Visits</div>
+            <div class="percentage">Percentages</div>
+          </div>
+          <div class="table-row">
+            <div class="serial">01</div>
+            <div class="country"> <img src="img/elements/f1.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-1" role="progressbar" style="width: 80%"
+                  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">02</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-2" role="progressbar" style="width: 30%"
+                  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">03</div>
+            <div class="country"> <img src="img/elements/f3.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-3" role="progressbar" style="width: 55%"
+                  aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">04</div>
+            <div class="country"> <img src="img/elements/f4.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-4" role="progressbar" style="width: 60%"
+                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">05</div>
+            <div class="country"> <img src="img/elements/f5.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-5" role="progressbar" style="width: 40%"
+                  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">06</div>
+            <div class="country"> <img src="img/elements/f6.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-6" role="progressbar" style="width: 70%"
+                  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">07</div>
+            <div class="country"> <img src="img/elements/f7.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-7" role="progressbar" style="width: 30%"
+                  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="table-row">
+            <div class="serial">08</div>
+            <div class="country"> <img src="img/elements/f8.jpg" alt="flag">Canada</div>
+            <div class="visit">645032</div>
+            <div class="percentage">
+              <div class="progress">
+                <div class="progress-bar color-8" role="progressbar" style="width: 60%"
+                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- slider_area_end -->
 
