--- a/flights.html
+++ b/flights.html
@@ -1,9 +1,10 @@
+<!doctype html>
 <html class="no-js" lang="zxx">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sky Link</title>
+    <title>Contact Us</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,12 +22,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/gijgo.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slicknav.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
-
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/flights.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -35,90 +32,105 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-    <!-- header-start -->
-    <header>
-        <div class="header-area ">
-            <div class="header-top_area d-none d-lg-block">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-md-5 ">
-                            <div class="header_left">
-                                <p>Welcome to Sky Link</p>
-                            </div>
-                        </div>
-                        <div class="col-xl-7 col-md-7">
-                            <div class="header_right d-flex">
-                                    <div class="short_contact_list">
-                                            <ul>
-                                                <li><a href="#"> <i class="fa fa-envelope"></i> info@skylink.com</a></li>
-                                                <li><a href="#"> <i class="fa fa-phone"></i> (888) 888-8888</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="social_media_links">
-                                            <a href="#">
-                                                <i class="fa fa-linkedin"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa fa-facebook"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa fa-google-plus"></i>
-                                            </a>
-                                        </div>
-                            </div>
 
+        <!-- header-start -->
+        <header>
+            <div class="header-area ">
+                <div class="header-top_area d-none d-lg-block">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-5 col-md-5 ">
+                                <div class="header_left">
+                                    <p>Welcome to Sky Link</p>
+                                </div>
+                            </div>
+                            <div class="col-xl-7 col-md-7">
+                                <div class="header_right d-flex">
+                                        <div class="short_contact_list">
+                                                <ul>
+                                                    <li><a href="#"> <i class="fa fa-envelope"></i> info@skylink.com</a></li>
+                                                    <li><a href="#"> <i class="fa fa-phone"></i> (888) 888-8888</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="social_media_links">
+                                                <a href="#">
+                                                    <i class="fa fa-linkedin"></i>
+                                                </a>
+                                                <a href="#">
+                                                    <i class="fa fa-facebook"></i>
+                                                </a>
+                                                <a href="#">
+                                                    <i class="fa fa-google-plus"></i>
+                                                </a>
+                                            </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="sticky-header" class="main-header-area">
-                <div class="container">
-                    <div class="header_bottom_border">
-                        <div class="row align-items-center">
-                            <div class="col-xl-3 col-lg-2">
-                                <div class="logo">
-                                    <a href="index.html">
-                                        <img src="img/logo.png" alt="">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-lg-7">
-                                <div class="main-menu  d-none d-lg-block">
-                                    <nav>
-                                        <ul id="navigation">
-                                            <li><a class="active" href="index.html">flights</a></li>
-                                            <li><a href="#">Information <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                        <li><a href="about.html">Hotels</a></li>
-                                                        <li><a href="property_details.html">Car Rentals</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="careers.html">Careers</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                            <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                <div class="Appointment">
-                                    <div class="search_btn">
-                                        <a href="#">
-                                            <i class="ti-search"></i>
+                <div id="sticky-header" class="main-header-area">
+                    <div class="container">
+                        <div class="header_bottom_border">
+                            <div class="row align-items-center">
+                                <div class="col-xl-3 col-lg-2">
+                                    <div class="logo">
+                                        <a href="index.html">
+                                            <img src="img/logo.png" alt="">
                                         </a>
                                     </div>
                                 </div>
+                                <div class="col-xl-6 col-lg-7">
+                                    <div class="main-menu  d-none d-lg-block">
+                                        <nav>
+                                            <ul id="navigation">
+                                                <li><a class="active" href="index.html">flights</a></li>
+                                                <li><a href="#">Information <i class="ti-angle-down"></i></a>
+                                                    <ul class="submenu">
+                                                            <li><a href="about.html">Hotels</a></li>
+                                                            <li><a href="property_details.html">Car Rentals</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="careers.html">Careers</a></li>
+                                                <li><a href="contact.html">Contact</a></li>
+                                            </ul>
+                                        </nav>
+                                    </div>
+                                </div>
+                                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                                    <div class="Appointment">
+                                        <div class="search_btn">
+                                            <a href="flights.html">
+                                                <i class="ti-search"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="mobile_menu d-block d-lg-none"></div>
+                                </div>
                             </div>
-                            <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- header-end -->
+
+             <!-- bradcam_area  -->
+             <div class="bradcam_area bradcam_bg_1">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <div class="bradcam_text text-center">
+                                    <h3>Contact Us</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-            </div>
-        </div>
-    </header>
-    <!-- header-end -->
+                <!--/ bradcam_area  -->
 <br></br>
 <br></br>
 <br></br>
