--- a/index.html
+++ b/index.html
@@ -411,10 +411,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             ' - </i>' + $('#slider').slider('values', 1) + '</span>');
 
         $('.ui-slider-handle:eq(0)').append('<span class="price-range-min value">' + $('#slider').slider('values', 0) +
-            'k</span>');
+            '</span>');
 
         $('.ui-slider-handle:eq(1)').append('<span class="price-range-max value">' + $('#slider').slider('values', 1) +
-            'k</span>');
+            '</span>');
     </script>
 </body>
 
