--- a/flights.html
+++ b/flights.html
@@ -124,21 +124,18 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="bradcam_text text-center">
-                                    <h3>Contact Us</h3>
+                                    <h3>Flight Options</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!--/ bradcam_area  -->
-<br></br>
-<br></br>
-<br></br>
     <div class="section-top-border">
       <div class="progress-table-wrap">
         <div class="progress-table">
           <div class="table-head">
-            <div class="serial">#</div>
+            <div class="serial">Destination</div>
             <div class="country">Countries</div>
             <div class="visit">Visits</div>
             <div class="percentage">Percentages</div>
@@ -235,5 +232,22 @@
       </div>
     </div>
     <!-- slider_area_end -->
-
+    <!-- footer start -->
+    <footer class="footer">
+        <div class="copy-right_text">
+            <div class="container">
+                <div class="footer_border"></div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <p class="copy_right text-center">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--/ footer end  -->
 </html>
