--- a/flights.html
+++ b/flights.html
@@ -29,7 +29,7 @@
 
 <body>
     <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+            <p class="browserupgrade">You are using an <strong>outseriald</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
 
@@ -135,10 +135,11 @@
       <div class="progress-table-wrap">
         <div class="progress-table">
           <div class="table-head">
-            <div class="serial">Destination</div>
-            <div class="country">Countries</div>
-            <div class="visit">Visits</div>
-            <div class="percentage">Percentages</div>
+            <div class="serial">Flight serial</div>
+            <div class="country">Destination</div>
+            <div class="visit">Departing Time</div>
+            <div class="percentage">Arrival Time</div>
+            <div class="percentage">Arrival Time</div>
           </div>
           <div class="table-row">
             <div class="serial">01</div>
@@ -241,7 +242,7 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new serial().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
