--- a/flights.html
+++ b/flights.html
@@ -135,15 +135,15 @@
       <div class="progress-table-wrap">
         <div class="progress-table">
           <div class="table-head">
-            <div class="serial">Flight serial</div>
+            <div class="serial">Flight Date</div>
             <div class="country">Destination</div>
             <div class="visit">Departing Time</div>
-            <div class="percentage">Arrival Time</div>
+            <div class="percentage">Flight #</div>
             <div class="percentage">Arrival Time</div>
           </div>
           <div class="table-row">
-            <div class="serial">01</div>
-            <div class="country"> <img src="img/elements/f1.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">02</div>
+            <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
@@ -164,8 +164,8 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">03</div>
-            <div class="country"> <img src="img/elements/f3.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -175,8 +175,8 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">04</div>
-            <div class="country"> <img src="img/elements/f4.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -186,8 +186,8 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">05</div>
-            <div class="country"> <img src="img/elements/f5.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -197,8 +197,8 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">06</div>
-            <div class="country"> <img src="img/elements/f6.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -208,8 +208,8 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">07</div>
-            <div class="country"> <img src="img/elements/f7.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -219,8 +219,8 @@
             </div>
           </div>
           <div class="table-row">
-            <div class="serial">08</div>
-            <div class="country"> <img src="img/elements/f8.jpg" alt="flag">Canada</div>
+            <div class="serial">02/25/2020</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
