--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@ l<!doctype html>
                                                         <div class="single-field max_width ">
                                                                 <label for="#">Departing</label>
                                                                 <select class="wide" >
-                                                                        <option data-display="Atlanta">Atlanta</option>
-                                                                        <option value="1">Los Angeles</option>
-                                                                        <option value="2">Chicago</option>
+                                                                        <option data-display="Cincinnati">Cincinnati</option>
                                                                 </select>
                                                             </div>
                                                         <div class="single-field max_width ">
@@ -149,6 +147,12 @@ l<!doctype html>
                                                                         <option data-display="Chicago">Chicago</option>
                                                                         <option value="1">Atlanta</option>
                                                                         <option value="2">Los Angeles</option>
+                                                                        <option value="3">New York</option>
+                                                                        <option value="4">Washington</option>
+                                                                        <option value="5">Las Vegas</option>
+                                                                        <option value="6">Orlando</option>
+                                                                        <option value="7">Miami</option>
+                                                                        <option value="8">San Francisco</option>
                                                                 </select>
                                                             </div>
                                                             <div class="single_field range_slider">
