--- a/flights.html
+++ b/flights.html
@@ -143,7 +143,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Chicago</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -154,7 +154,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Atlanta</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -165,7 +165,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Los Angeles</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -176,7 +176,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">New York</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -187,7 +187,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Washington</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -198,7 +198,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Las Veges</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -209,7 +209,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Orlando</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
@@ -220,7 +220,7 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Miami</div>
             <div class="visit">645032</div>
             <div class="percentage">
               <div class="progress">
